# SelectedTopicsCompElectronics

./: .clang-format  .gitignore  CMakeLists.txt  PyRequirements.txt  Readme.md  globals.json  hello_world.cpp  install.sh  python_vdb_test.ipynb  raytracing.cpp  submit.sh
data/: 2022-03-31_23-32-11_Ryzen7_3700X_GTX_970.csv  2022-03-31_23-51-52_Ryzen7_3700X_GTX_970.csv  2022-04-05_07-55-41_Xeon_6248_Tesla_T4.csv  2022-04-05_22-01-15_Xeon_6248_Tesla_T4.csv  2022-04-05_22-31-00_Xeon_6248_Tesla_T4.csv  2022-04-07_22-29-16_gpu_short_name_loadfactor_50.csv  2022-04-07_23-07-51_gpu_short_name_loadfactor_1_shuffled.csv  2022-04-07_23-52-28_gpu_short_name_loadfactor_1_offset_shuffled.csv  2022-04-08_01-00-21_gpu_short_name_loadfactor_100_shuffling.csv  errors.csv  results.csv
doc/: 1-introduction.tex  2-methology.tex  3-results.tex  4-discussion.tex  5-conclusions.tex  6-appendix.tex  99-templateChapter.tex  bibliography.bib  main.tex
doc/res/: drawings.pptx
script/: common.py  error-analysis.ipynb  plots.ipynb  run.ipynb  run_benchmark.py  run_cluster.ipynb  run_cluster.py
src/: CMakeLists.txt  Makefile  benchmarker.cpp  benchmarker.hpp  common.hpp  main.cpp  nanovdb.cpp  nanovdb.cu  raytracing.cpp
src/benchmarker/: benchmarker.cpp  benchmarker.hpp  benchmarker_cuda.cu  nanoVDB_GPU.cu  nanoVDB_GPU.hpp
src/precision/: analysis.ipynb  main.cpp  precision.hpp  stdafx.hpp
src/precision/data/: data_voxelsize1.csv  data_voxelsize5.csv  data_voxelsize5_wRays.csv  open_nano_100.csv
src/util/: misc.hpp  timer.hpp
